--- a/teaching.html
+++ b/teaching.html
@@ -22,7 +22,7 @@ Physics department & International Bachelor <p>
 CY Cergy Paris Université. Paris, 95000. France.<p>
  <font color="009900">ORCID ID:</font> 
 <a href="https://orcid.org/0000-0002-6262-1801">https://orcid.org/0000 &#45 0002 &#45 6262&#45 1801</a>   <p>
-<a href="https://publons.com/researcher/2587328/yerali-c-gandica-lopez/">Publons</a>   <p>
+<a href="https://www.webofscience.com/wos/author/record/M-6261-2013">Web of Science</a>   <p>
 <a href="https://scholar.google.fr/citations?hl=fr&user=gbWlX60AAAAJ">Google Scholar</a>   <p>
 <font color="0099FF"> twitter.com/ygandica</font>   <p>
 
