--- a/publications.html
+++ b/publications.html
@@ -38,57 +38,109 @@ CY Cergy Paris Université. Paris, 95000. France.<p>
   <div class="col col-2">
 
 </P><UL>
-<LI> [25] The distance-aware Axelrod Model. Yérali <u>Gandica</u>, Petter Holme and Silvia Chiacchiera (Work in progress).
-<LI> [24] Signs of universal patterns in Social explosions. Mariano G. Beiró, J. Stephen Lansing, Stefan Thurner, Ning Ning Chung, Lock Yue Chew and Yérali <u>Gandica</u> (Work in progress).
-<LI> [23] Detection and effect of social events on Wikipedia data-set for studying human preferences. Julien Assuied and Yérali <u>Gandica</u>. Submitted.
-<LI> [22] The consequences of hesitation: Axelrod model with intrinsic noise. Rémi Perrier, Yérali <u>Gandica</u> and Laura Hernández. PLoS ONE 16(11): e0259295. DOI:10.1371/journal.pone.0259295 (2021).
-<LI> [21] Bali ancient rice terraces: A Hamiltonian approach. Yérali <u>Gandica</u>, J. Stephen Lansing, Stefan Thurner, Ning Ning Chung and Lock Yue Chew Phys. Rev.Lett. <b>127</b>, 168301. https://doi.org/10.1103/PhysRevLett.127.168301 (2021).
-<LI> [20] A multilevel analysis of financial institutions’ systemic exposure from local and system-wide information. Y&eacuterali <u>Gandica</u>, Sophie B&eacutereau and Jean&#45Yves Gnabo. Scientific Reports, <b> 10</b>,
-17657. https://doi.org/10.1038/s41598-020-74259-7 (2020).
-<LI> [19] The free and freer XY models. Petter Holme and Y&eacuterali <u>Gandica</u>. Phys. Rev. E. <b>101</b>, 032311. https://doi.org/10.1103/PhysRevE.101.032311 (2020).
-<LI> [18] Measuring the effect of node aggregation on community detection. Y&eacuterali <u>Gandica</u>, Adeline Decuyper, Christophe Cloquet, Isabelle Thomas and Jean-Charles Delvenne. EPJ Data Sci. <b>9 </b>, 6 https://doi.org/10.1140/epjds/s13688-020-00223-0 (2020)
-<LI> [17] Population&#39s preferences trough Wikipedia edits.  
-Y&eacuterali <u>Gandica</u>. \\ https://ieeexplore.ieee.org/document/8554724. 2018 Fifth International Conference on Social Networks Analysis, Management and Security (SNAMS) \\  DOI: 10.1109/SNAMS.2018.8554724. https://arxiv.org/abs/1809.08513 (2018)
- <LI>[16] Fragmentation, integration and macroprudential surveillance of the US financial industry: 
-Insights from network science. Y&eacuterali <u>Gandica</u>, Marco Geraci, Sophie B&eacutereau and  Jean&#45Yves Gnabo. 
-PLoS ONE <b> 13</b>(4): e0195110. \\
-https://doi.org/10.1371/journal.pone.0195110 (2018).
-<LI>[15] Influence of homophily and community formation on bounded confidence dynamics.  Floriana 
-Gargiulo and Y&eacuterali <u>Gandica</u>.  Journal of Artificial Societies and Social Journal of Artificial Societies 
-and Social Simulation (JASSS) <b> 20</b>(3)8.(2017). 
-<LI>[14] Emergent dense suburbs in a schelling metapopulation model: a simulation approach . Floriana  Garguilo,
-Y&eacuterali <u>Gandica</u> and Timoteo Carletti. Advances in Complex Systems <b> 20</b> No. 1 (2017). https://doi.org/10.1142/S0219525917500011 
-<LI>[13] Stationarity of the inter&#45event power&#45law distributions. Y&eacuterali <u>Gandica</u>, Jo&aacuteo Carvalho, Fernando Sampaio dos Aidos,
-Renaud Lambiotte and Timoteo Carletti. PLoS ONE <b> 12</b>(3): e0174509. doi:10.1371/journal.pone.0174509 (2017). 
-<LI>[12] What can Wikipedia tell us about the global or local measurements for burstiness? Y&eacuterali <u>Gandica</u>,
-Renaud Lambiotte and Timoteo Carletti. Proceeding for the 10 th  International AAAI Conference on Web
-and Social Media (ICWSM­16) (2016).
-<LI>[11] Extrems events in the far from equilibrium Brusselator model with delay feedback. Mustapha 
-Tlidi, Y&eacuterali <u>Gandica</u>, Giorgio Sonnino, Etienne Averlant and Krassimir Panajotov. Entropy <b> 18</b>, 64; 
-doi:10.3390/e18030064 (2016).
-<LI>[10] Nature of phase transitions in the 2D Axelrod&#45like coupled Potts models. Y&eacuterali <u>Gandica</u> and Silvia 
-Chiacchiera. Phys. Rev. E <b> 93</b>, 032132 (2016).
-<LI>[9] Circadian patterns on Wikipedia edits. Y&eacuterali <u>Gandica</u>, Jo&aacuteo Carvalho, Fernando Sampaio dos Aidos, Renaud
-Lambiotte and Timoteo Carletti. Proceedings of the 7th Workshop on Complex Networks, CompleNet 2016. 
-<LI>[8] Can topology reshape segregation patterns?  Y&eacuterali <u>Gandica</u>, Floriana Gargiulo and Timoteo Carletti. Chaos, Solitons 
-and Fractals <b> 90</b> (2015) 46–54.
-<LI>[7] Wikipedia editing dynamics. Y&eacuterali <u>Gandica</u>, Jo&aacuteo Carvalho and Fernando Sampaio dos Aidos . Physical Review E 
-<b> 91</b>, 012824 (2015).
-<LI>[6] The dynamic nature of conflict in Wikipedia. Y&eacuterali <u>Gandica</u>, Fernando Sampaio dos Aidos and Jo&aacuteo Carvalho. 
-EPL <b> 108</b>,18003 (2014).
-<LI>[5] Hypoxia in vascular networks: a complex system approach to unraveling the Diabetes paradox. 
-Y&eacuterali <u>Gandica</u>, Tobias Schwartz, Orlando Oliveira and Rui Travasso. PLoS ONE <b> 9</b> ,11 , e113165 
-(2014).
-<LI>[4] A thermodynamic counterpart of the Axelrod model of social influence: One Dimensional case. 
-Y&eacuterali <u>Gandica</u>, Ismardo Bonalde and Ernesto Medina. Physica A <b> 392</b>. Issue: 24. Pages: 6561­6570. 
-(2013)
-<LI>[3] Cluster size entropy in the Axelrod model of social influence: Small&#45world networks and mass 
-media. Y&eacuterali <u>Gandica</u>, A. Charmell, J. Villegas­Febres and I. Bonalde. Physical Review E. <b> 84</b> , 046109
-(2011).
-<LI>[2] Continuous opinion model in small&#45world directed networks. Y&eacuterali <u>Gandica</u>, Marcelo del Castillo
-Mussot, Gerardo V&aacutesquez and Sergio Rojas, Physica A <b> 389</b> 24, 5864 &#45 5870 (2010).
-<LI>[1] Complex propagation on directed small&#45world networks. Y&eacuterali <u>Gandica</u>, Ismardo Bonalde and Juan
-Luis Cabrera. Physica A <b> 389</b> 19, 4172­4176 (2010). 
+<LI> [26] <NOM> The distance-aware Axelrod Model </NOM>  <br />
+Yérali <u>Gandica</u>, Petter Holme and Silvia Chiacchiera <br />  
+(Work in progress) <p>
+  
+<LI> [25] <NOM> Bounded confidence models on growing SF networks </NOM> <br />
+Yérali <u>Gandica</u>, Floriana Gargiulo and Guillaume Deffuant <br />
+(Work in progress) <p>
+  
+<LI> [24] <NOM> Signs of universal patterns in Social explosions </NOM> <br />
+Mariano G. Beiró, J. Stephen Lansing, Stefan Thurner, Ning Ning Chung, Lock Yue Chew and Yérali <u>Gandica</u> <br />
+(Work in progress) <p>
+
+<LI> [23] <NOM> Detection and effect of social events on Wikipedia data-set for studying human preferences </NOM> <br />
+ Julien Assuied and Yérali <u>Gandica</u><br />
+  Submitted <p>
+  
+<LI> [22] <NOM> The consequences of hesitation: Axelrod model with intrinsic noise </NOM> <br />
+Rémi Perrier, Yérali <u>Gandica</u> and Laura Hernández <br />
+ PLoS ONE <b> 16 </b>(11): e0259295. DOI:10.1371/journal.pone.0259295 (2021) <p>
+ 
+<LI> [21] <NOM> Bali ancient rice terraces: A Hamiltonian approach </NOM> <br />
+ Yérali <u>Gandica</u>, J. Stephen Lansing, Stefan Thurner, Ning Ning Chung and Lock Yue Chew  <br /> 
+ Phys. Rev.Lett. <b>127</b>, 168301. https://doi.org/10.1103/PhysRevLett.127.168301 (2021) <p>
+ 
+<LI> [20] <NOM> A multilevel analysis of financial institutions’ systemic exposure from local and system-wide information </NOM> <br />
+Y&eacuterali <u>Gandica</u>, Sophie B&eacutereau and Jean&#45Yves Gnabo <br /> Scientific Reports, <b> 10</b>, 
+17657. https://doi.org/10.1038/s41598-020-74259-7 (2020) <p>
+
+<LI> [19] <NOM> The free and freer XY models </NOM> <br /> 
+Petter Holme and Y&eacuterali <u>Gandica</u> <br />
+Phys. Rev. E. <b>101</b>, 032311. https://doi.org/10.1103/PhysRevE.101.032311 (2020) <p>
+
+<LI> [18] <NOM> Measuring the effect of node aggregation on community detection </NOM> <br /> 
+Y&eacuterali <u>Gandica</u>, Adeline Decuyper, Christophe Cloquet, Isabelle Thomas and Jean-Charles Delvenne <br /> 
+EPJ Data Sci. <b>9 </b>, 6 https://doi.org/10.1140/epjds/s13688-020-00223-0 (2020) <p>
+
+<LI> [17] <NOM> Population&#39s preferences trough Wikipedia edits </NOM> <br />  
+Y&eacuterali <u>Gandica</u> <br />
+https://ieeexplore.ieee.org/document/8554724. 2018 Fifth International Conference on Social Networks Analysis, Management and Security (SNAMS) \\  DOI: 10.1109/SNAMS.2018.8554724. https://arxiv.org/abs/1809.08513 (2018) <p>
+ 
+ <LI>[16] <NOM> Fragmentation, integration and macroprudential surveillance of the US financial industry: 
+Insights from network science </NOM> <br />
+Y&eacuterali <u>Gandica</u>, Marco Geraci, Sophie B&eacutereau and  Jean&#45Yves Gnabo <br />
+PLoS ONE <b> 13</b>(4): e0195110. https://doi.org/10.1371/journal.pone.0195110 (2018) <p>
+
+<LI>[15] <NOM> Influence of homophily and community formation on bounded confidence dynamics </NOM> <br />
+Floriana Gargiulo and Y&eacuterali <u>Gandica</u> <br />
+Journal of Artificial Societies and Social Journal of Artificial Societies and Social Simulation (JASSS) <b> 20</b> (3) 8.(2017) <p>
+
+<LI>[14] <NOM> Emergent dense suburbs in a schelling metapopulation model: a simulation approach </NOM> <br />
+Floriana  Garguilo, Y&eacuterali <u>Gandica</u> and Timoteo Carletti <br />
+Advances in Complex Systems <b> 20</b> No. 1 (2017). https://doi.org/10.1142/S0219525917500011 <p>
+
+<LI>[13] <NOM> Stationarity of the inter&#45event power&#45law distributions </NOM> <br />
+ Y&eacuterali <u>Gandica</u>, Jo&aacuteo Carvalho, Fernando Sampaio dos Aidos,
+Renaud Lambiotte and Timoteo Carletti <br /> PLoS ONE <b> 12</b>(3): e0174509. doi:10.1371/journal.pone.0174509 (2017) <p>
+
+<LI>[12] <NOM> What can Wikipedia tell us about the global or local measurements for burstiness?  </NOM> <br /> 
+Y&eacuterali <u>Gandica</u>,Renaud Lambiotte and Timoteo Carletti <br />
+Proceeding for the 10 th  International AAAI Conference on Web and Social Media (ICWSM­16) (2016) <p>
+
+<LI>[11] <NOM> Extrems events in the far from equilibrium Brusselator model with delay feedback </NOM> <br />
+Mustapha Tlidi, Y&eacuterali <u>Gandica</u>, Giorgio Sonnino, Etienne Averlant and Krassimir Panajotov <br /> 
+Entropy <b> 18</b>, 64; doi:10.3390/e18030064 (2016) <p>
+
+<LI>[10] <NOM> Nature of phase transitions in the 2D Axelrod&#45like coupled Potts models </NOM> <br />
+Y&eacuterali <u>Gandica</u> and Silvia Chiacchiera <br />
+Phys. Rev. E <b> 93</b>, 032132 (2016) <p>
+
+<LI>[9] <NOM> Circadian patterns on Wikipedia edits </NOM> <br /> 
+Y&eacuterali <u>Gandica</u>, Jo&aacuteo Carvalho, Fernando Sampaio dos Aidos, Renaud Lambiotte and Timoteo Carletti <br />
+Proceedings of the 7th Workshop on Complex Networks, CompleNet 2016 <p> 
+
+<LI>[8] <NOM> Can topology reshape segregation patterns? </NOM> <br />
+Y&eacuterali <u>Gandica</u>, Floriana Gargiulo and Timoteo Carletti <br />
+Chaos, Solitons and Fractals <b> 90</b> (2015) 46–54 <p>
+
+<LI>[7] <NOM> Wikipedia editing dynamics <br /> Y&eacuterali <u>Gandica</u>, Jo&aacuteo Carvalho and Fernando Sampaio dos Aidos </NOM> <br />
+Physical Review E <b> 91</b>, 012824 (2015) <p>
+
+<LI>[6] <NOM> The dynamic nature of conflict in Wikipedia </NOM> <br /> 
+Y&eacuterali <u>Gandica</u>, Fernando Sampaio dos Aidos and Jo&aacuteo Carvalho <br /> 
+EPL <b> 108</b>,18003 (2014)<p>
+
+<LI>[5] <NOM> Hypoxia in vascular networks: a complex system approach to unraveling the Diabetes paradox </NOM> <br />
+Y&eacuterali <u>Gandica</u>, Tobias Schwartz, Orlando Oliveira and Rui Travasso <br />
+PLoS ONE <b> 9</b> ,11 , e113165 (2014) <p>
+
+<LI>[4] <NOM> A thermodynamic counterpart of the Axelrod model of social influence: One Dimensional case </NOM> <br />
+Y&eacuterali <u>Gandica</u>, Ismardo Bonalde and Ernesto Medina <br /> 
+Physica A <b> 392</b>. Issue: 24. Pages: 6561­6570 (2013) <p>
+
+<LI>[3] <NOM> Cluster size entropy in the Axelrod model of social influence: Small&#45world networks and mass media </NOM> <br />
+Y&eacuterali <u>Gandica</u>, A. Charmell, J. Villegas­Febres and I. Bonalde <br />
+Physical Review E. <b> 84</b> , 046109 (2011) <p>
+
+<LI>[2] <NOM> Continuous opinion model in small&#45world directed networks </NOM> <br />
+Y&eacuterali <u>Gandica</u>, Marcelo del Castillo Mussot, Gerardo V&aacutesquez and Sergio Rojas <br />
+Physica A <b> 389</b> 24, 5864 &#45 5870 (2010) <p>
+
+<LI>[1] <NOM> Complex propagation on directed small&#45world networks </NOM> <br />
+Y&eacuterali <u>Gandica</u>, Ismardo Bonalde and Juan Luis Cabrera <br />
+Physica A <b> 389</b> 19, 4172­4176 (2010) <p> 
 
 </OL>
 
